2003-04-07  Ulrich Drepper  <drepper@redhat.com>

	* elf/ldconfig.c (parse_conf): Ignore leading whitespace.  Use
	feof_unlocked instead of feof.
	(add_dir): Ignore trailing whitespace.

2003-04-07  Jakub Jelinek  <jakub@redhat.com>

	* posix/bug-regex4.c (main): Cap RANGE and STOP arguments to
	sum of SIZE1 and SIZE2 arguments.

2003-04-06  Ulrich Drepper  <drepper@redhat.com>

	* iconv/iconv_prog.c (process_block): Don't print message about
	invalid input if the -c option is used.
	(main): Correctly append IGNORE string for -c option.

2002-04-06  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/bits/atomic.h: Moved to ...
	* sysdeps/unix/sysv/linux/sh/bits/atomic.h: ... here.  Add comments.
	(__arch_compare_and_exchange_val_*_acq): Add parens around macro
	arguments.
	(atomic_bit_set, atomic_bit_test_set): Likewise.
	(atomic_exchange_and_add): Likewise.  Don't evaluate VALUE argument
	twice.
	(atomic_add, atomic_add_negative, atomic_add_zero): Likewise.

2003-04-06  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/i386/swapcontext.S: Rewrite register
	restoration as done for setcontext yesterday.

2003-04-06  Jakub Jelinek  <jakub@redhat.com>

	* elf/rtld.c: Revert 2003-03-14 change.
	* elf/dl-conflict.c (_dl_resolve_conflicts): Move
	#if ! ELF_MACHINE_NO_RELA conditional into the routine.

2003-04-05  Ulrich Drepper  <drepper@redhat.com>

	* sunrpc/xdr.c (xdr_string): Catch nodesize == 0 [PR libc/4999].

	* sysdeps/ieee754/ldbl-96/e_gammal_r.c (__ieee754_gammal_r):
	Always initialize *signgamp before returning an error.

2003-04-05  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/i386/setcontext.S: Rewrite to avoid writing
	below the stack pointer even if switching to the same context we are
	running right now.

2003-04-05  Ulrich Drepper  <drepper@redhat.com>

	* catgets/gencat.c (read_input_file): Make sure that \n is not
	alone on the line before testing for continuation.

	* math/test-tgmath.c (compile_test): Initialize c.
