@@ -1,3 +1,15 @@
+2003-04-08  Alexandre Oliva  <aoliva@redhat.com>
+
+	* sysdeps/mips/sys/regdef.h (t4,t5,t6,t7): Renamed to t0..t3 on
+	NewABI.
+	(ta0, ta1, ta2, ta3): Defined to t4..t7 on o32, and a4..a7 on
+	NewABI.
+	* sysdeps/mips/mips64/memcpy.S: Adjust register naming
+	conventions.
+	* sysdeps/mips/mips64/memset.S: Likewise.
+	* sysdeps/unix/mips/sysdep.S (__syscall_error) [_LIBC_REENTRANT]:
+	Use t0 instead of t4 as temporary.
+
 2003-04-07  Ulrich Drepper  <drepper@redhat.com>
 
 	* elf/ldconfig.c (parse_conf): Ignore leading whitespace.  Use
